--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,65 +12,40 @@
     <meta name="description" content="Memory Game, user has to remember and recreated the given audio sequence">
     <meta name="keywords" content="Simon Game">
 
-    <!-- fonts -->
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 
-    <!-- CSS -->
-    <link rel="stylesheet" href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
-    <link rel="stylesheet" href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css">
-    <link rel="stylesheet" href="main.css">
-
-
+    <link href="css/main.css" type="text/css" rel="stylesheet">
 </head>
-<body class="container-fluid text-center">
 
-    <div class="row">
-        <section class="hints col-xs-12 col-md-6">
-
-            <div class="start box parent">
-                <div class="child">
-                    <h1>Simon</h1>
-                    <button id="play-button" class="btn ghost-btn btn-lg" type="button">Start Playing</button>
-                </div>
+<body>
+    <section class="hints">
+        <div class="start box">
+            <h1>Simon Game</h1>
+            <button>Start Playing</button>
+        </div>
+        <div class="info box hidden">
+            <h2>
+                Step
+                <span id="step-count">1</span>
+            </h2>
+        </div>
+        <div class="settings box">
+            <div class="toggle-container">
+                <input type="checkbox" />
+                <div class="slider round"></div>
             </div>
-
-            <div class="info box hidden parent">
-                <div class="child">
-                    <h2>Step <span id="step-count">1</span></h2>
-                    <h3 id="not"></h3>
-                </div>
-            </div>
-
-            <div class="setting box parent">
-                <div class="child">
-                    <div class="checkbox strict-lg">
-                        <input type="checkbox" data-toggle="toggle" data-onstyle="info" />
-                        <label id="toggle-label">Strict Mode</label>
-                    </div>
-                </div>
-
-                <button type="button" class="btn ghost-btn restart invisible">
-                    <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span> Restart
-                </button>
-            </div>
-
-        </section>
-
-        <!-- Play Area -->
-        <section class="buttons col-xs-12 col-md-6">
-            <a href="#" class="top-left-btn btn-1" data-id="1" aria-label="button-1"></a>
-            <a href="#" class="top-right-btn btn-2" data-id="2" aria-label="button-2"></a>
-            <a href="#" class="btm-left-btn btn-3" data-id="3" aria-label="button-3"></a>
-            <a href="#" class="btm-right-btn btn-4" data-id="4" aria-label="button-4"></a>
-        </section>
-
-        <section class="audio"></section>
-    </div>
+            Strict Mode
+        </div>
+    </section>
+    <section class="sections">
+        <div class="top-left-btn" data-id="1"></div>
+        <div class="top-right-btn" data-id="2"></div>
+        <div class="btm-left-btn" data-id="3"></div>
+        <div class="btm-right-btn" data-id="4"></div>
+    </section>
 
     <!-- scripts -->
-    <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
-    <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>
-    <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
 </body>
+
 </html>
